RESOLVED FIXED281418
[Navigation] Fix manual-scroll-fragment-does-not-exist.html
https://bugs.webkit.org/show_bug.cgi?id=281418
Summary [Navigation] Fix manual-scroll-fragment-does-not-exist.html
Rob Buis
Reported 2024-10-14 03:01:24 PDT
Fix manual-scroll-fragment-does-not-exist.html.
Attachments
Rob Buis
Comment 1 2024-10-14 03:07:01 PDT
EWS
Comment 2 2024-10-14 09:42:05 PDT
Committed 285125@main (202b715bb61c): <https://commits.webkit.org/285125@main> Reviewed commits have been landed. Closing PR #35141 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-14 09:43:15 PDT
Note You need to log in before you can comment on or make changes to this bug.