[Navigation] Fix manual-scroll-fragment-does-not-exist.html https://bugs.webkit.org/show_bug.cgi?id=281418

Reviewed by Alex Christensen.

Fix manual-scroll-fragment-does-not-exist.html by not scrolling to the top
of the page if the fragment can't be found.

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/scroll-behavior/manual-scroll-fragment-does-not-exist-expected.txt:
* Source/WebCore/page/NavigateEvent.cpp:
(WebCore::NavigateEvent::processScrollBehavior):

Canonical link: https://commits.webkit.org/285125@main